--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^3.4.0",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
